# bladesight-worksheets

./: README.md  pyproject.toml
intro_to_btt/: ch_02_worksheet.ipynb  ch_03_worksheet.ipynb  ch_04_worksheet.ipynb  ch_05_worksheet.ipynb  ch_06_worksheet.ipynb  ch_08_worksheet.ipynb  ch_09_worksheet.ipynb
