[tool.poetry]
name = "bladesight-worksheets"
version = "0.1.0"
description = "This repo contains all worksheets for bladesight tutorials"
authors = ["Dawie Diamond <dawie.diamond@bladesight.com>"]
readme = "README.md"
packages = [{include = "bladesight_worksheets"}]

[tool.poetry.dependencies]
python = ">3.10,<3.12"
bladesight = "^0.13.2"
plotly = "^5.18.0"


[tool.poetry.group.local.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
