[tool.poetry]
name = "bladesight-worksheets"
version = "0.2.0"
description = "Worksheets for Bladesight tutorials"
authors = ["Dawie Diamond <dawie.diamond@bladesight.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bladesight_worksheets"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
bladesight = 0.14.0
plotly = "^5.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
