[tool.poetry]
name = "bladesight-worksheets"
version = "0.2.0"
description = "Worksheets for Bladesight tutorials"
authors = ["Dawie Diamond <dawie.diamond@bladesight.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bladesight_worksheets"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
plotly = "^5.23.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
